<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:textColor="@color/teal_200"
            android:textSize="24sp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_this_game"
            app:layout_constraintTop_toBottomOf="@+id/about_title" />

        <TextView
            android:id="@+id/about_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:textSize="17sp"
            android:lineSpacingExtra="10dp"
            android:text="@string/onur_web_hyper_link"
            app:layout_constraintTop_toBottomOf="@+id/about_text" />

        <TextView
            android:id="@+id/about_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_decimals"
            app:layout_constraintTop_toBottomOf="@+id/about_link" />


        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:textColor="@color/bubble_gum"
            android:textSize="42sp"
            android:text="x"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:textSize="20sp"
            android:text="@string/app_name"
            android:textColor="@color/bubble_gum"
            android:fontFamily="@font/arial_rounded_bold"
            android:src="@drawable/ic_big_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>