<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:gravity="center"
                    android:text="@string/feedback_title"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/feedback_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@color/faded_blue"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:hint="@string/type"
                    android:maxLength="1000"
                    android:minHeight="150dp"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:gravity="center"
                    android:text="@string/feedback_info"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/feedback_edittext" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:layout_marginBottom="28dp"
                    android:fontFamily="@font/arial_rounded_bold"
                    android:padding="20dp"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="30dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_rounded_bold"
            android:padding="20dp"
            android:text="x"
            android:textColor="@color/bubble_gum"
            android:textSize="42sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>