<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <View
            android:id="@+id/circle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:text="i"
            android:textColor="@color/bubble_gum"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintLeft_toLeftOf="@+id/circle"
            app:layout_constraintRight_toRightOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:text="@string/onboarding_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/circle" />

        <TextView
            android:id="@+id/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:text="@string/onboarding_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/decimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:text="@string/onboarding_decimal"
            android:textColor="@color/white"
            android:textSize="38sp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle1" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:gravity="center"
            android:text="@string/onboarding_text2"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/decimal" />

        <LinearLayout
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/explanation"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/decimal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/arial_rounded_bold"
                android:gravity="center"
                android:text="22"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintTop_toBottomOf="@+id/subtitle1" />

            <TextView
                android:id="@+id/decimal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/arial_rounded_bold"
                android:gravity="center"
                android:text="22,1"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/subtitle1" />

            <TextView
                android:id="@+id/decimal4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/arial_rounded_bold"
                android:gravity="center"
                android:text="22,2"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintTop_toBottomOf="@+id/subtitle1" />

            <TextView
                android:id="@+id/decimal5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/arial_rounded_bold"
                android:gravity="center"
                android:text="22,3"
                android:textColor="@color/white"
                android:textSize="38sp"
                app:layout_constraintTop_toBottomOf="@+id/subtitle1" />


        </LinearLayout>


        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/arial_rounded_bold"
            android:padding="20dp"
            android:text="@string/onboarding_done"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>